# VCS

./: CMakeLists.txt  LICENSE  README.md  build.sh  build_win.bat  test_win.bat  vcs
include/: common.hpp
include/core/: branchManager.hpp  commitManager.hpp  vcsClass.hpp
include/models/: branch.hpp  commit.hpp
include/utils/: hashUtils.hpp  huffmanCoder.hpp  pathUtils.hpp
src/: main.cpp
src/core/: branchManager.cpp
testfolder/: test.sh
vcs_test_repo/: file1.txt.huff  file2.txt.huff  vcs_test_log.txt
vcs_test_repo/.vcs/: branches.json  commits.json
vcs_test_repo/.vcs/commits/i9sJX4z5/data/: branchfile.txt.huff
